--- a/PRUEBA2.HTML
+++ b/PRUEBA2.HTML
@@ -1,96 +1,54 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Dashboard de Inventario</title>
-  <script src="https://cdn.jsdelivr.net/npm/tabletop@1.6.0/tabletop.min.js"></script>
-  <style>
-    body {
-      background-color: #1e1e1e;
-      color: #f0f0f0;
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 2rem;
-    }
-
-    h1 {
-      color: #00ffff;
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background-color: #2c2c2c;
-      border-radius: 8px;
-      overflow: hidden;
-    }
-
-    th, td {
-      padding: 12px 16px;
-      border-bottom: 1px solid #444;
-      text-align: left;
-    }
-
-    th {
-      background-color: #333;
-      color: #00ffff;
-      font-weight: bold;
-    }
-
-    tr:hover {
-      background-color: #383838;
-    }
-
-    .stock-bajo {
-      background-color: rgba(255, 0, 0, 0.3);
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 3rem;
-      font-size: 0.9rem;
-      color: #666;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Visualizador de Google Sheets</title>
+<style>
+  body {
+    margin: 0;
+    padding: 10px;
+    background: #121212;
+    color: #eee;
+    font-family: Arial, sans-serif;
+  }
+  iframe {
+    border: none;
+    width: 100%;
+    height: 80vh; /* altura decente para ver */
+    box-shadow: 0 0 15px rgba(0, 255, 255, 0.5);
+    border-radius: 6px;
+  }
+  h1 {
+    text-align: center;
+    margin-bottom: 15px;
+    font-weight: normal;
+    color: #00ffff;
+  }
+</style>
 </head>
 <body>
 
-<h1>Visualizador de Inventario</h1>
-<table id="tabla"></table>
+<h1>Visualizador Google Sheets</h1>
 
-<footer>
-  Datos cargados automáticamente desde Google Sheets
-</footer>
+<iframe 
+  id="gsheet" 
+  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRhPyU7uxwMUl-K_B606TUUrIJHpeK80YgbpkupaLGfg-_8EUYbPm-7CyPwrF81U_ytPm8065viZgjP/pubhtml?widget=true&amp;headers=false" 
+  allowfullscreen>
+</iframe>
 
 <script>
-  window.onload = function() {
-    Tabletop.init({
-      key: '1hjCh-IUibb-SYtAMZDKx4gsjIgLPMMByEm9VWCxqqCA',
-      simpleSheet: true,
-      callback: function(data) {
-        const tabla = document.getElementById("tabla");
-        const headers = ["PRODUCTOS", "INVENTARIO INICIAL", "TOTAL POR ACTIVIDADES", "TOTAL DISPONIBLE"];
-        let html = "<thead><tr>";
-        headers.forEach(h => html += `<th>${h}</th>`);
-        html += "</tr></thead><tbody>";
-
-        data.forEach(row => {
-          const total = parseFloat(row["TOTAL DISPONIBLE"]) || 0;
-          const rowClass = total < 10 ? "stock-bajo" : "";
-          html += `<tr class="${rowClass}">`;
-          headers.forEach(h => html += `<td>${row[h]}</td>`);
-          html += "</tr>";
-        });
-
-        html += "</tbody>";
-        tabla.innerHTML = html;
-      }
-    });
-  };
+  // Si quieres hacer algún ajuste dinámico en futuro, aquí puedes poner JS.
+  // Por ejemplo, que el iframe cambie de alto según tamaño de pantalla:
+  function ajustarAltura() {
+    const iframe = document.getElementById('gsheet');
+    iframe.style.height = (window.innerHeight * 0.8) + 'px';
+  }
+  window.addEventListener('resize', ajustarAltura);
+  ajustarAltura();
 </script>
 
 </body>
 </html>
+
 
