--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   </div>
 
   <div class="botones">
-    <a class="whatsapp-btn" href="https://wa.me/52XXXXXXXXXX?text=Hola,%20quiero%20consultar%20el%20inventario" target="_blank">📞 WhatsApp</a>
+    <a class="whatsapp-btn" href="https://wa.me/5212228496995?text=Hola,%20quiero%20consultar%20el%20inventario" target="_blank">📞 WhatsApp</a>
     <a class="pdf-btn" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRhPyU7uxwMUl-K_B606TUUrIJHpeK80YgbpkupaLGfg-_8EUYbPm-7CyPwrF81U_ytPm8065viZgjP/pub?output=pdf" target="_blank">🔖 Descargar PDF</a>
     <button class="modo-btn" onclick="alternarModo()">⚫​Modo Oscuro⚫​</button>
   </div>
