--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <div class="container">
   <div class="loading" id="loading">Analizando conexión... ⏳</div>
 
-  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRhPyU7uxwMUl-K_B606TUUrIJHpeK80YgbpkupaLGfg-_8EUYbPm-7CyPwrF81U_ytPm8065viZgjP/pubhtml?widget=true&amp;headers=false"></iframe>
+  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRhPyU7uxwMUl-K_B606TUUrIJHpeK80YgbpkupaLGfg-_8EUYbPm-7CyPwrF81U_ytPm8065viZgjP/pubhtml?widget=true&headers=false"></iframe>
 
   <div class="chart-container">
     <h3 style="text-align:center; margin-bottom: 20px;">Resumen Visual del Inventario</h3>
@@ -178,17 +178,14 @@
     <button class="modo-btn" onclick="alternarModo()">⚫​Modo Oscuro⚫​</button>
   </div>
 
-  <!-- Reproductor Spotify -->
   <div style="text-align:center; margin-top:20px;">
-    <iframe src="https://open.spotify.com/embed/track/52WLog8aTizUeOacC31H6S" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <iframe src="https://open.spotify.com/embed/track/52WLog8aTizUeOacC31H6S"
+      width="300" height="80" style="border:none;" allow="encrypted-media"></iframe>
   </div>
-
-  <div class="vigilancia" id="vigilancia"></div>
 
   <div class="vigilancia" id="vigilancia"></div>
 </div>
 
-<!-- Contenedor Noticias -->
 <div id="noticiasContainer" class="container">
   <h3 style="text-align:center;">Últimas Noticias de Puebla</h3>
   <div id="newsList">Cargando noticias...</div>
@@ -206,21 +203,28 @@
       document.getElementById('loading').style.display = 'none';
       const { ip, city = '', region = '', country_name: country = '', org = 'proveedor desconocido' } = data;
       document.getElementById('vigilancia').innerHTML = `📍 Acceso registrado desde <strong>${ip}</strong> (${city}, ${region}, ${country})<br><span style="color:#aaa;">Auditoría (${org})</span>`;
-      // 👁️ Envío al Worker de Cloudflare para registrar visita en Google Sheets
-fetch('https://regvisitas.corporativoimperdellanta.workers.dev/', {
-  method: 'POST',
-  headers: { 'Content-Type': 'application/json' },
-  body: JSON.stringify({
-    ip: ip,
-    city: city,
-    region: region,
-    country: country,
-    org: org,
-    url: window.location.href
-  })
-}).catch(err => {
-  console.error("Error enviando datos al Worker:", err);
-});
+
+      const clientData = {
+        ip: ip,
+        city: city,
+        region: region,
+        country: country,
+        org: org,
+        url: window.location.href,
+        userAgent: navigator.userAgent,
+        language: navigator.language || 'no-language',
+        screen: `${window.screen.width}x${window.screen.height}`,
+        timezone: Intl.DateTimeFormat().resolvedOptions().timeZone || 'no-timezone',
+        localTime: new Date().toLocaleString(),
+        utcTime: new Date().toISOString(),
+        tipo: 'VISITA'
+      };
+
+      fetch('https://regvisitas.corporativoimperdellanta.workers.dev/', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(clientData)
+      }).catch(err => console.error("Error enviando datos al Worker:", err));
     })
     .catch(() => {
       document.getElementById('loading').style.display = 'none';
@@ -238,7 +242,6 @@ fetch('https://regvisitas.corporativoimperdellanta.workers.dev/', {
     "SELLADOR 1 L": 20,
   };
 
-  // CSV url con proxy
   const csvUrl = 'https://corsproxy.io/?https://docs.google.com/spreadsheets/d/e/2PACX-1vRhPyU7uxwMUl-K_B606TUUrIJHpeK80YgbpkupaLGfg-_8EUYbPm-7CyPwrF81U_ytPm8065viZgjP/pub?output=csv';
 
   fetch(csvUrl)
@@ -250,7 +253,7 @@ fetch('https://regvisitas.corporativoimperdellanta.workers.dev/', {
       rows.forEach(row => {
         const cols = row.split(',');
         const prod = cols[0].replace(/"/g,'').trim();
-        const total = parseFloat(cols[3]);
+        const total = parseFloat(cols[3]) || 0;
 
         labels.push(prod);
         data.push(total);
@@ -268,23 +271,25 @@ fetch('https://regvisitas.corporativoimperdellanta.workers.dev/', {
         data: { labels, datasets: [{ label: 'Stock Disponible', data, backgroundColor: colors }] },
         options: {
           responsive: true,
-          plugins: { legend: { display: false }, title: { display: true, text: 'Inventario Real por Producto' } }
+          plugins: {
+            legend: { display: false },
+            title: { display: true, text: 'Inventario Real por Producto' }
+          }
         }
       });
 
-      if(alertas.length) {
+      if (alertas.length) {
         document.getElementById('alertasMinimos').innerHTML = alertas.join('<br>');
       } else {
         document.getElementById('alertasMinimos').style.display = 'none';
       }
     });
 
-  // Modo oscuro toggle
   function alternarModo() {
     document.body.classList.toggle('dark-mode');
   }
 
-  // Slider Noticias config
+  // Noticias RSS
   const RSS_PROXY = 'https://rss-noti.corporativoimperdellanta.workers.dev/';
   const newsList = document.getElementById('newsList');
   const scrollAmount = 300;
@@ -307,9 +312,7 @@ fetch('https://regvisitas.corporativoimperdellanta.workers.dev/', {
         const xml = parser.parseFromString(str, 'text/xml');
         const items = xml.querySelectorAll('item');
         newsList.innerHTML = '';
-        items.forEach(item => {
-          newsList.appendChild(crearNoticia(item));
-        });
+        items.forEach(item => newsList.appendChild(crearNoticia(item)));
       })
       .catch(() => {
         newsList.innerHTML = '<p style="color:#b91c1c;">No se pudieron cargar las noticias. Intenta más tarde.</p>';
@@ -323,7 +326,6 @@ fetch('https://regvisitas.corporativoimperdellanta.workers.dev/', {
     newsList.scrollBy({ left: scrollAmount, behavior: 'smooth' });
   });
 
-  // carga noticias arranque
   cargarNoticias();
 </script>
 </body>
